starting to fix banner image spacing and whatnot

--- a/newIndex/style.css
+++ b/newIndex/style.css
@@ -1,15 +1,26 @@
-.grid li{
+.grid .msn-item{
 	text-align: center;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	height: 15vw;
 	max-height: 200px;
 	min-height: 150px;
-  max-width: 300px;
+  min-width: 200px;
 	box-sizing: border-box;
-  overflow: hidden;
+	cursor: pointer;
+	margin: 15px;
+	position: relative;
 }
 
-.grid li img{
+.grid .msn-item .img-container{
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+.grid .msn-item img{
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -21,7 +32,7 @@
 	transition: all 0.2s ease;
 }
 
-.grid li::after{
+.grid .msn-item::after{
 	content: '';
 	position: absolute;
 	display: block;
@@ -35,41 +46,167 @@
 	z-index: 1;
 }
 
-.grid li h3{
+.grid .msn-item h3{
 	position: absolute;
-	bottom: 0;
+	bottom: 10px;
 	color: white;
 	z-index: 2;
 	font-size: 40px;
 	margin: 0;
 	text-align: left;
 	font-family: 'Roboto Condensed';
-	margin: 10px;
+	margin: 15px;
+	background: #0F2537;
+	padding: 5px;
+	left: -34px;
+	box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 	transition: all 0.2s ease;
 }
 
-/*.grid li:nth-child(4) h3{
+.grid .msn-item:hover h3{
+	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+	bottom: 12px;
+	/*left: -25px;*/
+}
+
+.msn-item h3::before {
+	content: '';
+	display: block;
+	height: 20px;
+	width: 19px;
+	background: no-repeat center;
+	background-image: url(https://caas.usu.edu/ou-images/hover-image-bottomleft-triangle.png);
+	position: absolute;
+	bottom: -20px;
+	left: 0px
+}
+
+/*.grid .msn-item:nth-child(4) h3{
 font-size: 300%;
 }*/
 
-.grid li p{
+.grid .msn-item p{
 	/*position: absolute;*/
 	display: none;
 }
 
-.grid li:hover::after{
+.grid .msn-item:hover::after{
 	opacity: 0.4;
 }
 
-.grid li:hover img{
+.grid .msn-item:hover img{
 	min-width: 105%;
 	min-height: 105%;
 	top:-2%;
 	left: -2%;
 }
+
+.banner{
+	position: relative;
+	min-height: 200px;
+	max-height: 400px;
+	height: 40vh;
+	position: relative;
+	overflow: hidden;
+}
+
+.banner .full-banner{
+	position: absolute;
+	top: 0;
+	min-width: 100%;
+	min-height: 130%;
+	z-index: 1;
+	max-width: 1400px;
+	z-index: 1;
+}
+
+.banner .blurry-banner{
+	min-width: 100%;
+	min-height: 130%;
+	filter: blur(10px);
+	z-index: 0
+}
+
+@media (min-width: 1400px) {
+	.banner .full-banner{
+		min-width: 1400px;
+		width: 1400px;
+		margin: auto;
+		left: 50%;
+		transform: translateX(-50%);
+		box-shadow: inset 0 0 2px transparent;
+	}
+}
+
+.banner .banner-text{
+	font-family: Helvetica;
+	color: #002a46;
+	font-weight: bold;
+	width: 400px;
+	left: calc(40% - 150px);
+	top: 50%;
+	transform: translateY(-50%);
+	z-index: 2;
+	position: absolute;
+	padding: 0;
+	text-align: center;
+}
+
+.banner-text h1, .banner-text h2{
+	margin: 5px;
+}
+
+@font-face {
+    font-family: 'BebasNeue Bold';
+    src: url("https://caas.usu.edu/_resources/fonts/BebasNeue Bold.otf") format("opentype");
+}
+
+@font-face {
+	font-family: 'LatinoType';
+	src: url("https://caas.usu.edu/_resources/fonts/Latinotype - TrendSansOne.otf");
+}
+
+.banner .banner-text h2{
+	font-family: 'LatinoType';
+	font-size: 40pt;
+}
+
+.banner .banner-text h1{
+	font-family: 'BebasNeue Bold';
+	font-size: 90pt;
+}
+
+@media (min-width: 880px){
+	.banner > img{
+		width: 100%;
+	}
+}
+
+@media (max-width: 879px){
+	.banner > img{
+		height: 130%;
+	}
+}
+
+@media (min-width: 957px){
+	.grid .msn-item{
+		width: calc(30%);
+	}
+}
+@media (max-width: 956px){
+	.grid .msn-item{
+		width: calc(50% - 30px);
+	}
+}
+@media (max-width: 620px){
+	.grid .msn-item{
+		width: calc(100% - 30px);
+	}
+}
+
 /*
 @media (max-width: 1100px) {
-	.grid li:not(.grid-sizer){
+	.grid .msn-item:not(.grid-sizer){
 		width: calc(50% - 30px) !important;
 		padding-top: 30%;
 	}
@@ -79,7 +216,7 @@ font-size: 300%;
 }
 
 @media (max-width: 730px) {
-	.grid li:not(.grid-sizer){
+	.grid .msn-item:not(.grid-sizer){
 		width: calc(100% - 30px) !important;
 		padding-top: 50%;
 	}
